added section subscribe + slider

--- a/app/blog-page.html
+++ b/app/blog-page.html
@@ -539,7 +539,7 @@
   </main>
 
   <div class="subscribe-box blog-page__sb">
-    <div class="container-fuid container-grey">
+    <div class="container-fluid container-grey">
       <div class="container">
       <div class="subscribe-box__inner">
         <img class="subscribe-box__image" src="images/content/subscribebox-2.png" alt="sub image">
