--- a/app/blog-single.html
+++ b/app/blog-single.html
@@ -406,6 +406,300 @@
       </div>
     </section>
 
+    <div class="subscribe-box blog-page__sb">
+      <div class="container-fluid container-grey">
+        <div class="container">
+        <div class="subscribe-box__inner">
+          <img class="subscribe-box__image" src="images/content/subscribebox-2.png" alt="sub image">
+          <div class="subscribe-box__content">
+            <h3 class="subscribe-box__title">
+              Don’t want to miss the best events?
+              Subscribe to our newsletter!
+            </h3>
+            <form class="subscribe-box__form">
+              <label class="subscribe-box__line">
+                <input type="text" placeholder="Your working email">
+                <button class="btn">Subscribe</button>
+              </label>
+              <label>
+                <input class="subscribe-box__checkbox" type="checkbox">
+                I agree to receive communications from Createx Online School
+              </label>
+            </form>
+          </div>
+  
+        </div>
+      </div>
+      </div>
+      
+    </div>
+
+    <section class="blog-slider">
+      <div class="container-fluid container-grey">
+        <div class="container">
+          <div class="blog__inner">
+            <div class="blog__title-box">
+              <h6 class="blog__suptitle">
+                Our blog
+              </h6>
+              <h2 class="blog__title">
+                You may also like
+              </h2>          
+            </div>
+            <div class="blog__posts-slider">
+              <article class="blog__post">
+                <div class="blog-post__image-box">
+                  <img class="blog-post__image" src="images/content/post-1.png" alt="post one"
+                    style="width: 390px; height: 300px;">
+                  <div class="blog-post__image-descr">
+                    <p>podcast</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-microphone" width="12"
+                      height="12" viewBox="0 0 24 24" stroke-width="1.5" stroke="#424551" fill="none"
+                      stroke-linecap="round" stroke-linejoin="round">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <rect x="9" y="2" width="6" height="11" rx="3" />
+                      <path d="M5 10a7 7 0 0 0 14 0" />
+                      <line x1="8" y1="21" x2="16" y2="21" />
+                      <line x1="12" y1="17" x2="12" y2="21" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="blog-post__descrption-box">
+                  <a class="blog-post__category blog-post__descrption-item" href="#">Marketing </a>
+                  <p class="blog-post__date blog-post__descrption-item">September 4, 2020</p>
+                  <p class="blog-post__duration blog-post__descrption-item">36</p>
+                </div>
+                <div class="blog-post__info-box">
+                  <a class="blog-post__title" href="#">
+                    <h5>What is traffic arbitrage and does it really make money?</h5>
+                  </a>
+                  <p class="blog-post__text">
+                    Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus, purus
+                    gravida...
+                  </p>
+                </div>
+                <a class="blog-post__btn" href="#">
+                  Listen
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                  class="icon icon-tabler icon-tabler-arrow-narrow-right" width="20" height="20" viewBox="0 0 24 24"
+                  stroke-width="1.5" stroke="#FF3F3A" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <line x1="5" y1="12" x2="19" y2="12" />
+                  <line x1="15" y1="16" x2="19" y2="12" />
+                  <line x1="15" y1="8" x2="19" y2="12" />
+                </svg>
+                </a>
+              </article>
+              <article class="blog__post">
+                <div class="blog-post__image-box">
+                  <img class="blog-post__image" src="images/content/post-2.png" alt="post one"
+                    style="width: 390px; height: 300px;">
+                  <div class="blog-post__image-descr">
+                    <p>video</p>
+                    <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M10.7117 6.44002C11.4099 6.97368 11.4099 8.02507 10.7117 8.55873L7.65841 10.8924C6.78101 11.5629 5.51541 10.9373 5.51541 9.833V5.16575C5.51541 4.06144 6.78101 3.43581 7.65841 4.1064L10.7117 6.44002ZM9.90204 7.49938L6.84875 5.16575L6.84875 9.833L9.90204 7.49938Z" fill="#424551"/>
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M7.99984 1.49935C4.68613 1.49935 1.99984 4.18564 1.99984 7.49935C1.99984 10.8131 4.68613 13.4993 7.99984 13.4993C11.3135 13.4993 13.9998 10.8131 13.9998 7.49935C13.9998 4.18564 11.3135 1.49935 7.99984 1.49935ZM0.666504 7.49935C0.666504 3.44926 3.94975 0.166016 7.99984 0.166016C12.0499 0.166016 15.3332 3.44926 15.3332 7.49935C15.3332 11.5494 12.0499 14.8327 7.99984 14.8327C3.94975 14.8327 0.666504 11.5494 0.666504 7.49935Z" fill="#424551"/>
+                      </svg>
+                  </div>
+                </div>
+                <div class="blog-post__descrption-box">
+                  <a class="blog-post__category blog-post__descrption-item" href="#">Marketing</a>
+                  <p class="blog-post__date  blog-post__descrption-item">September 4, 2020</p>
+                  <p class="blog-post__duration  blog-post__descrption-item">36</p>
+                </div>
+                <div class="blog-post__info-box">
+                  <a class="blog-post__title" href="#">
+                    <h5>What is traffic arbitrage and does it really make money?</h5>
+                  </a>
+                  <p class="blog-post__text">
+                    Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus, purus
+                    gravida...
+                  </p>
+                </div>
+                <a class="blog-post__btn" href="#">
+                  watch
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                  class="icon icon-tabler icon-tabler-arrow-narrow-right" width="20" height="20" viewBox="0 0 24 24"
+                  stroke-width="1.5" stroke="#FF3F3A" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <line x1="5" y1="12" x2="19" y2="12" />
+                  <line x1="15" y1="16" x2="19" y2="12" />
+                  <line x1="15" y1="8" x2="19" y2="12" />
+                </svg>
+                </a>
+              </article>
+              <article class="blog__post">
+                <div class="blog-post__image-box">
+                  <img class="blog-post__image" src="images/content/post-3.png" alt="post one"
+                    style="width: 390px; height: 300px;">
+                  <div class="blog-post__image-descr">
+                    <p>article</p>
+                    <svg width="12" height="15" viewBox="0 0 12 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M3.3335 8.50065C3.3335 8.13246 3.63197 7.83398 4.00016 7.83398H8.00016C8.36835 7.83398 8.66683 8.13246 8.66683 8.50065C8.66683 8.86884 8.36835 9.16732 8.00016 9.16732H4.00016C3.63197 9.16732 3.3335 8.86884 3.3335 8.50065Z" fill="#424551"/>
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M3.3335 11.0007C3.3335 10.6325 3.63197 10.334 4.00016 10.334H6.00016C6.36835 10.334 6.66683 10.6325 6.66683 11.0007C6.66683 11.3688 6.36835 11.6673 6.00016 11.6673H4.00016C3.63197 11.6673 3.3335 11.3688 3.3335 11.0007Z" fill="#424551"/>
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M4.02877 0.529247C4.1538 0.404222 4.32337 0.333984 4.50018 0.333984H9.00018C10.4729 0.333984 11.6668 1.52789 11.6668 3.00065L11.6668 12.0007C11.6668 13.4734 10.4729 14.6673 9.00018 14.6673H3.00016C1.5274 14.6673 0.333492 13.4734 0.333496 12.0006L0.333513 4.50065C0.333513 4.32384 0.403751 4.15427 0.528775 4.02925L4.02877 0.529247ZM4.33349 2.11015V4.33398H2.10965L4.33349 2.11015ZM1.66684 5.66732L1.66683 12.0006C1.66683 12.737 2.26378 13.334 3.00016 13.334H9.00018C9.73656 13.334 10.3335 12.737 10.3335 12.0007L10.3335 3.00065C10.3335 2.26427 9.73656 1.66732 9.00018 1.66732H5.66682V5.00065C5.66682 5.36884 5.36835 5.66732 5.00016 5.66732H1.66684Z" fill="#424551"/>
+                      </svg>
+                  </div>
+                </div>
+                <div class="blog-post__descrption-box">
+                  <a class="blog-post__category blog-post__descrption-item blog-post__descrption-item"
+                    href="#">Marketing</a>
+                  <p class="blog-post__date blog-post__descrption-item blog-post__descrption-item">September 4, 2020</p>
+                  <p class="blog-post__duration blog-post__descrption-item blog-post__descrption-item">36</p>
+                </div>
+                <div class="blog-post__info-box">
+                  <a class="blog-post__title" href="#">
+                    <h5>What is traffic arbitrage and does it really make money?</h5>
+                  </a>
+                  <p class="blog-post__text">
+                    Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus, purus
+                    gravida...
+                  </p>
+                </div>
+                <a class="blog-post__btn" href="#">read 
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-arrow-narrow-right" width="20" height="20" viewBox="0 0 24 24"
+                    stroke-width="1.5" stroke="#FF3F3A" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <line x1="5" y1="12" x2="19" y2="12" />
+                    <line x1="15" y1="16" x2="19" y2="12" />
+                    <line x1="15" y1="8" x2="19" y2="12" />
+                  </svg>
+                </a>
+              </article>
+              <article class="blog__post">
+                <div class="blog-post__image-box">
+                  <img class="blog-post__image" src="images/content/post-1.png" alt="post one"
+                    style="width: 390px; height: 300px;">
+                  <div class="blog-post__image-descr">
+                    <p>podcast</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-microphone" width="12"
+                      height="12" viewBox="0 0 24 24" stroke-width="1.5" stroke="#424551" fill="none"
+                      stroke-linecap="round" stroke-linejoin="round">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <rect x="9" y="2" width="6" height="11" rx="3" />
+                      <path d="M5 10a7 7 0 0 0 14 0" />
+                      <line x1="8" y1="21" x2="16" y2="21" />
+                      <line x1="12" y1="17" x2="12" y2="21" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="blog-post__descrption-box">
+                  <a class="blog-post__category blog-post__descrption-item" href="#">Marketing </a>
+                  <p class="blog-post__date blog-post__descrption-item">September 4, 2020</p>
+                  <p class="blog-post__duration blog-post__descrption-item">36</p>
+                </div>
+                <div class="blog-post__info-box">
+                  <a class="blog-post__title" href="#">
+                    <h5>What is traffic arbitrage and does it really make money?</h5>
+                  </a>
+                  <p class="blog-post__text">
+                    Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus, purus
+                    gravida...
+                  </p>
+                </div>
+                <a class="blog-post__btn" href="#">
+                  Listen
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                  class="icon icon-tabler icon-tabler-arrow-narrow-right" width="20" height="20" viewBox="0 0 24 24"
+                  stroke-width="1.5" stroke="#FF3F3A" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <line x1="5" y1="12" x2="19" y2="12" />
+                  <line x1="15" y1="16" x2="19" y2="12" />
+                  <line x1="15" y1="8" x2="19" y2="12" />
+                </svg>
+                </a>
+              </article>
+              <article class="blog__post">
+                <div class="blog-post__image-box">
+                  <img class="blog-post__image" src="images/content/post-2.png" alt="post one"
+                    style="width: 390px; height: 300px;">
+                  <div class="blog-post__image-descr">
+                    <p>video</p>
+                    <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M10.7117 6.44002C11.4099 6.97368 11.4099 8.02507 10.7117 8.55873L7.65841 10.8924C6.78101 11.5629 5.51541 10.9373 5.51541 9.833V5.16575C5.51541 4.06144 6.78101 3.43581 7.65841 4.1064L10.7117 6.44002ZM9.90204 7.49938L6.84875 5.16575L6.84875 9.833L9.90204 7.49938Z" fill="#424551"/>
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M7.99984 1.49935C4.68613 1.49935 1.99984 4.18564 1.99984 7.49935C1.99984 10.8131 4.68613 13.4993 7.99984 13.4993C11.3135 13.4993 13.9998 10.8131 13.9998 7.49935C13.9998 4.18564 11.3135 1.49935 7.99984 1.49935ZM0.666504 7.49935C0.666504 3.44926 3.94975 0.166016 7.99984 0.166016C12.0499 0.166016 15.3332 3.44926 15.3332 7.49935C15.3332 11.5494 12.0499 14.8327 7.99984 14.8327C3.94975 14.8327 0.666504 11.5494 0.666504 7.49935Z" fill="#424551"/>
+                      </svg>
+                  </div>
+                </div>
+                <div class="blog-post__descrption-box">
+                  <a class="blog-post__category blog-post__descrption-item" href="#">Marketing</a>
+                  <p class="blog-post__date  blog-post__descrption-item">September 4, 2020</p>
+                  <p class="blog-post__duration  blog-post__descrption-item">36</p>
+                </div>
+                <div class="blog-post__info-box">
+                  <a class="blog-post__title" href="#">
+                    <h5>What is traffic arbitrage and does it really make money?</h5>
+                  </a>
+                  <p class="blog-post__text">
+                    Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus, purus
+                    gravida...
+                  </p>
+                </div>
+                <a class="blog-post__btn" href="#">
+                  watch
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                  class="icon icon-tabler icon-tabler-arrow-narrow-right" width="20" height="20" viewBox="0 0 24 24"
+                  stroke-width="1.5" stroke="#FF3F3A" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <line x1="5" y1="12" x2="19" y2="12" />
+                  <line x1="15" y1="16" x2="19" y2="12" />
+                  <line x1="15" y1="8" x2="19" y2="12" />
+                </svg>
+                </a>
+              </article>
+              <article class="blog__post">
+                <div class="blog-post__image-box">
+                  <img class="blog-post__image" src="images/content/post-3.png" alt="post one"
+                    style="width: 390px; height: 300px;">
+                  <div class="blog-post__image-descr">
+                    <p>article</p>
+                    <svg width="12" height="15" viewBox="0 0 12 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M3.3335 8.50065C3.3335 8.13246 3.63197 7.83398 4.00016 7.83398H8.00016C8.36835 7.83398 8.66683 8.13246 8.66683 8.50065C8.66683 8.86884 8.36835 9.16732 8.00016 9.16732H4.00016C3.63197 9.16732 3.3335 8.86884 3.3335 8.50065Z" fill="#424551"/>
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M3.3335 11.0007C3.3335 10.6325 3.63197 10.334 4.00016 10.334H6.00016C6.36835 10.334 6.66683 10.6325 6.66683 11.0007C6.66683 11.3688 6.36835 11.6673 6.00016 11.6673H4.00016C3.63197 11.6673 3.3335 11.3688 3.3335 11.0007Z" fill="#424551"/>
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M4.02877 0.529247C4.1538 0.404222 4.32337 0.333984 4.50018 0.333984H9.00018C10.4729 0.333984 11.6668 1.52789 11.6668 3.00065L11.6668 12.0007C11.6668 13.4734 10.4729 14.6673 9.00018 14.6673H3.00016C1.5274 14.6673 0.333492 13.4734 0.333496 12.0006L0.333513 4.50065C0.333513 4.32384 0.403751 4.15427 0.528775 4.02925L4.02877 0.529247ZM4.33349 2.11015V4.33398H2.10965L4.33349 2.11015ZM1.66684 5.66732L1.66683 12.0006C1.66683 12.737 2.26378 13.334 3.00016 13.334H9.00018C9.73656 13.334 10.3335 12.737 10.3335 12.0007L10.3335 3.00065C10.3335 2.26427 9.73656 1.66732 9.00018 1.66732H5.66682V5.00065C5.66682 5.36884 5.36835 5.66732 5.00016 5.66732H1.66684Z" fill="#424551"/>
+                      </svg>
+                  </div>
+                </div>
+                <div class="blog-post__descrption-box">
+                  <a class="blog-post__category blog-post__descrption-item blog-post__descrption-item"
+                    href="#">Marketing</a>
+                  <p class="blog-post__date blog-post__descrption-item blog-post__descrption-item">September 4, 2020</p>
+                  <p class="blog-post__duration blog-post__descrption-item blog-post__descrption-item">36</p>
+                </div>
+                <div class="blog-post__info-box">
+                  <a class="blog-post__title" href="#">
+                    <h5>What is traffic arbitrage and does it really make money?</h5>
+                  </a>
+                  <p class="blog-post__text">
+                    Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin dignissim lacus, purus
+                    gravida...
+                  </p>
+                </div>
+                <a class="blog-post__btn" href="#">read 
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-arrow-narrow-right" width="20" height="20" viewBox="0 0 24 24"
+                    stroke-width="1.5" stroke="#FF3F3A" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <line x1="5" y1="12" x2="19" y2="12" />
+                    <line x1="15" y1="16" x2="19" y2="12" />
+                    <line x1="15" y1="8" x2="19" y2="12" />
+                  </svg>
+                </a>
+              </article>
+            </div>
+            <div class="blog-slider__btn-box">
+              <span>Do you want more articles, podcasts and videos?</span>
+              <a class="btn blog-slider__btn" href="#">Go to blog</a>
+            </div> 
+          </div>
+        </div>
+      </div>
+      
+    </section>
+
+   
+
 
   </main>
 
